--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,13 @@ header {
 .todos li {
     list-style-type: none;
     border-bottom: 1px solid black;
-    padding: 20px 0 10px;
+    padding: 15px 0 5px;
+    
 }
 .todos li:hover {
     background-color: rgba(255, 255, 255, 0.5);
 }
 .todos i {
     float: right;
+    padding-right: 10px;
 }
