--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,9 @@ header {
     padding: 15px 0 5px;
     
 }
+.todos li.done {
+    text-decoration: line-through;
+}
 .todos li:hover {
     background-color: rgba(255, 255, 255, 0.5);
 }
